--- a/persianmaterialdatetimepicker/build.gradle
+++ b/persianmaterialdatetimepicker/build.gradle
@@ -14,11 +14,11 @@ ext {
   siteUrl = 'https://github.com/mohamad-amin/PersianMaterialDateTimePicker'
   gitUrl = 'https://github.com/mohamad-amin/PersianMaterialDateTimePicker.git'
 
-  libraryVersion = '1.3.1'
+  libraryVersion = '2.0.0'
 
-  developerId = 'mohamad-amin'
-  developerName = 'Mohamad Amin Mohamadi'
-  developerEmail = 'torpedo.mohammadi@gmail.com'
+  developerId = 'fa-hessari'
+  developerName = 'Farhad A.Hessari'
+  developerEmail = 'farhadashrafhessari@gmail.com'
 
   licenseName = 'The Apache Software License, Version 2.0'
   licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
@@ -32,13 +32,17 @@ android {
   defaultConfig {
     minSdkVersion 17
     targetSdkVersion 27
-    versionCode 4
-    versionName "1.3.1"
+    versionCode 5
+    versionName "2.0.0"
   }
   buildTypes {
     release {
       minifyEnabled false
     }
+  }
+  compileOptions {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
   }
 }
 
