--- a/persianmaterialdatetimepicker/src/main/AndroidManifest.xml
+++ b/persianmaterialdatetimepicker/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mohamadamin.persianmaterialdatetimepicker">
+    package="com.golrangsystem.persianmaterialdatetimepicker">
 
   <uses-permission android:name="android.permission.VIBRATE"/>
   <application/>
